fix package name

--- a/uaa/src/main/resources/application-dev.properties
+++ b/uaa/src/main/resources/application-dev.properties
@@ -34,8 +34,8 @@ server.servlet.session.cookie.name=UISESSION
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ehsanyar2012@gmail.com
-spring.mail.password=1240035675
+spring.mail.username=mail@domain.com
+spring.mail.password=***
 
 #mail properties
 spring.mail.properties.mail.smtp.auth=true
