fix package name

--- a/uaa/src/main/resources/application-prod.properties
+++ b/uaa/src/main/resources/application-prod.properties
@@ -34,7 +34,7 @@ server.servlet.session.cookie.name=UISESSION
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ehsanyar2012@gmail.com
+spring.mail.username=mail@domain.com
 spring.mail.password=***
 
 #mail properties
