* add resource bundle * add swagger2

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,14 +1,1 @@
-server.port=3030
-debug=true
-
-management.security.enabled=false
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.instance-id=${spring.application.name}:${random.int}
-
-
-zuul.host.socket-timeout-millis=10000
-spring.cloud.inetutils.timeout-seconds=1000
-ribbon.eager-load.enabled=true
+spring.profiles.active=dev
