--- a/uaa/pom.xml
+++ b/uaa/pom.xml
@@ -54,7 +54,8 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
-			<version>1.0.9.RELEASE</version>
+			<!--<version>1.0.9.RELEASE</version>-->
+			<version>1.0.0.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>cryptix</groupId>
@@ -70,8 +71,16 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
-
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+		</dependency>
 
 	</dependencies>
 
